@@ -8715,7 +8715,7 @@ that have attributes
 are printed.
 .RE
 .TP
-\f3ulimit\fP \*(OK \f3\-HSaMctdfkxlqenuPpmrRbiswTv\fP \*(CK \*(OK \f2limit\^\fP \*(CK
+\f3ulimit\fP \*(OK \f3\-HSaMctdfkxlqenVuPpmrRbiswTv\fP \*(CK \*(OK \f2limit\^\fP \*(CK
 Set or display a resource limit.
 The available resource limits are listed below.
 Many systems do not support one or more of these limits.
@@ -8817,6 +8817,9 @@ The number of CPU seconds to be used by each process.
 .TP
 .B \-u
 The number of processes.
+.TP
+.B \-V
+The number of open vnode monitors.
 .TP
 .B \-v
 The number of K-bytes for virtual memory.
